unpackaged/main/default/objects/nbavs__AvailabilityProfileStateGroup__c/nbavs__AvailabilityProfileStateGroup__c.object-meta.xml
<CustomObject>
    <label>Availability Profile State Group</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Availability Profile State Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>