unpackaged/main/default/objects/nbavs__AvailabilityProfileStateGroup__c/fields/nbavs__AvailabilityProfileState__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AvailabilityProfileState__c</fullName>
    <label>Availability Profile State</label>
    <referenceTo>nbavs__AvailabilityProfileState__c</referenceTo>
    <relationshipLabel>Availability Profile State Groups</relationshipLabel>
    <relationshipName>Availability_Profile_State_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>