unpackaged/main/default/objects/nbavs__AvailabilityProfileStateGroup__c/fields/nbavs__AvailabilityProfileStateId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AvailabilityProfileStateId__c</fullName>
    <formula>nbavs__AvailabilityProfileState__r.nbavs__Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Availability Profile State API ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>