unpackaged/main/default/objects/nbavs__AvailabilityProfileStateGroup__c/fields/nbavs__Group__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Group__c</fullName>
    <label>Group</label>
    <referenceTo>nbavs__Group__c</referenceTo>
    <relationshipLabel>Availability Profile State Groups</relationshipLabel>
    <relationshipName>Availability_Profile_State_Group</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>