unpackaged/main/default/objects/nbavs__AvailabilityProfileStateGroup__c/fields/nbavs__GroupId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__GroupId__c</fullName>
    <formula>nbavs__Group__r.nbavs__Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group API iD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>